// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`upgradeMusicIndex v1 → current upgrades a v1 index to current 1`] = `
{
  "scannedAt": "2025-01-01T00:00:00.000Z",
  "tracks": [
    {
      "album": "Test Album",
      "artist": "Test Artist",
      "coverArt": null,
      "duration": 180.5,
      "genre": null,
      "mtime": "2024-12-01T00:00:00.000Z",
      "path": "/Artist/Album/track.mp3",
      "size": 3145728,
      "title": "Test Track",
      "track": null,
    },
    {
      "album": null,
      "artist": null,
      "coverArt": null,
      "duration": null,
      "genre": null,
      "mtime": "2024-11-01T00:00:00.000Z",
      "path": "/no-tags.mp3",
      "size": 1024,
      "title": null,
      "track": null,
    },
  ],
  "version": 4,
}
`;

exports[`upgradeMusicIndex v2 → current upgrades a v2 index to current 1`] = `
{
  "scannedAt": "2025-01-01T00:00:00.000Z",
  "tracks": [
    {
      "album": "Test Album",
      "artist": "Test Artist",
      "coverArt": null,
      "duration": 180.5,
      "genre": "Rock",
      "mtime": "2024-12-01T00:00:00.000Z",
      "path": "/Artist/Album/track.mp3",
      "size": 3145728,
      "title": "Test Track",
      "track": null,
    },
    {
      "album": null,
      "artist": null,
      "coverArt": null,
      "duration": null,
      "genre": null,
      "mtime": "2024-11-01T00:00:00.000Z",
      "path": "/no-tags.mp3",
      "size": 1024,
      "title": null,
      "track": null,
    },
  ],
  "version": 4,
}
`;

exports[`upgradeMusicIndex v3 → current upgrades a v3 index to current 1`] = `
{
  "scannedAt": "2025-01-01T00:00:00.000Z",
  "tracks": [
    {
      "album": "Test Album",
      "artist": "Test Artist",
      "coverArt": null,
      "duration": 180.5,
      "genre": "Rock",
      "mtime": "2024-12-01T00:00:00.000Z",
      "path": "/Artist/Album/track.mp3",
      "size": 3145728,
      "title": "Test Track",
      "track": 1,
    },
    {
      "album": null,
      "artist": null,
      "coverArt": null,
      "duration": null,
      "genre": null,
      "mtime": "2024-11-01T00:00:00.000Z",
      "path": "/no-tags.mp3",
      "size": 1024,
      "title": null,
      "track": null,
    },
  ],
  "version": 4,
}
`;
